crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_explicit_relative_import_from_parent_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.messages ─
message = "Hello"

# ─ Module: greetings ─
import types
greetings = types.ModuleType('greetings')
exec('', globals(), greetings.__dict__)

# ─ Module: greetings.greeting ─
import types
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = message\n__all__ = ["message"]', globals(), greetings.greeting.__dict__)

# ─ Entry Module: main ─
print(greetings.greeting.message)
