crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_explicit_relative_import_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = "Hello"', greetings.greeting.__dict__)

# ─ Module: greetings ─
exec('global message\nmessage = greetings.greeting.message\n__all__ = ["message"]\nlocals()[\'message\'] = message', {**globals(), 'greetings': greetings}, greetings.__dict__)

# ─ Entry Module: main ─
print(greetings.message)
