crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_explicit_relative_import_single_dot.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.messages ─
__greetings_messages_message = "Hello"

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('__all__ = ["message"]\n__greetings_greeting_message = __greetings_messages_message', globals(), greetings.greeting.__dict__)
greetings.greeting.message = getattr(greetings.greeting, '__greetings_greeting_message')

# ─ Module: greetings ─
exec('', globals(), greetings.__dict__)

# ─ Entry Module: main ─
print(greetings.greeting.message)
