crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_implicit_init_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.irrelevant ─
import types
greetings = types.ModuleType('greetings')
greetings.irrelevant = types.ModuleType('greetings.irrelevant')
exec('', greetings.irrelevant.__dict__)

# ─ Module: greetings ─
exec('message = "Hello"', globals(), greetings.__dict__)

# ─ Entry Module: main ─
print(greetings.message)
