crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_import_from_as_value.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
message = "Hello"

# ─ Entry Module: main ─
m = message
print(m)
