crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_imports_in_imported_modules.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.english ─
message = "Hello"

# ─ Module: greetings ─
import types
greetings = types.ModuleType('greetings')
exec('message = message', globals(), greetings.__dict__)

# ─ Entry Module: main ─
message = greetings.message
print(message)
