crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_module_with_triple_quotes.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
import types
greeting = types.ModuleType('greeting')
exec('message = "Hello\\n\'\'\'\\n" + \'"""\'', greeting.__dict__)

# ─ Entry Module: main ─
print(greeting.message)
