crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_script_using_from_to_import_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greetings.greeting ─
import types
greetings = types.ModuleType('greetings')
greetings.greeting = types.ModuleType('greetings.greeting')
exec('message = "Hello"', greetings.greeting.__dict__)

# ─ Entry Module: main ─
greeting = greetings.greeting
print(greeting.message)
