crates/cribo/tests/snapshots/test_bundling_snapshots__bundled_code@stickytape_script_using_from_to_import_multiple_values.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

# ─ Module: greeting ─
message = "Hello"
def print_stdout(value):
    print(value)

# ─ Entry Module: main ─
print_stdout(message)
